feedback and lessons edit.